gitops/espresso/infrastructure/configs/rustfs/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rustfs-internal
  namespace: rustfs
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - rustfs.gullhaugveien.michaelbrusegard.com
  rules:
    - backendRefs:
        - name: rustfs-svc
          port: 9001
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rustfs-s3-public
  namespace: rustfs
spec:
  parentRefs:
    - name: public
      namespace: gateway
      sectionName: https
  hostnames:
    - s3.manafishrov.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /manafishrov-firmware
      backendRefs:
        - name: rustfs-svc
          port: 9000
